@@ -100,6 +100,7 @@ namespace libtorrent
 			no_buffer = 4,
 			mode_mask = rw_mask | no_buffer,
 			sparse = 8,
+			random_access = 32,
 
 			attribute_hidden = 0x1000,
 			attribute_executable = 0x2000,
